Wrote the list example paragraph.

--- a/section2.tex
+++ b/section2.tex
@@ -1,6 +1,6 @@
 \section{Model of Computation}
 
-
+The interoperation of Haskell and ML posed another problem: the conversion of type abstractions. The application of a converted type abstraction cannot substitute the type argument into the inner language directly, since the inner language has no notion of the types of the outer language.
 
 Discuss hs t (sh t e) -> e / hm
 
