Changed csvar from 'u' to 'y'.
Renamed the value predicate syntaxes.

Renamed the universally quantified things, changed cs version to use 'conversion scheme'.

--- a/macros.tex
+++ b/macros.tex
@@ -8,7 +8,7 @@
 \newcommand{\symcont}{E}
 \newcommand{\symconu}{U}
 \newcommand{\symcs}{k}
-\newcommand{\symcsvar}{u}
+\newcommand{\symcsvar}{y}
 \newcommand{\symenv}{\Gamma}
 \newcommand{\symlumpeq}{\doteq}
 \newcommand{\symempty}{\emptyset}
