Finished the rough draft of the written part.

--- a/macros.tex
+++ b/macros.tex
@@ -4,7 +4,8 @@
 \newcommand{\symbrand}{b}
 \newcommand{\symcons}{cons}
 \newcommand{\symconf}{F}
-\newcommand{\symconm}{E}
+\newcommand{\symconm}{F}
+\newcommand{\symconmt}{E}
 \newcommand{\symcont}{E}
 \newcommand{\symconu}{U}
 \newcommand{\symcs}{k}
@@ -71,6 +72,7 @@
 \newcommand{\varbrand}{\ensuremath{\symbrand}\xspace}
 
 \newcommand{\varconm}{\ensuremath{\mathscr{\symconm}\xspace}}
+\newcommand{\varconmt}{\ensuremath{\mathscr{\symconmt}\xspace}}
 
 \newcommand{\varcont}{\ensuremath{\symcont}\xspace}
 \newcommand{\varconth}{\ensuremath{\varcont\langh}\xspace}
