--- a/section1.tex
+++ b/section1.tex
@@ -6,7 +6,7 @@ Matthews and Findler presented a method of safe interoperation between languages
 
 The model of computation of Matthews and Findler comprises two eager languages based on ML and Scheme. We extend their model of computation with a third language that is based on Haskell and identical to their ML-like language, except it is lazy. We introduce lists to all three languages. Hereafter, we use the names of Haskell, ML, and Scheme to refer to their counterparts in our model of computation.
 
-Unlike ML and Scheme, Haskell does not evaluate function arguments or list construction operands. These three contexts comprise the set of incompatible strictness points between Haskell and ML, and Haskell and Scheme. Since Haskell permits unused erroneous or divergent expressions in these contexts and ML and Scheme do not, there are Haskell values that have no counterpart in ML and Scheme. Attempting to convert such values to ML and Scheme forces the evaluation of such expressions and breaks the transparency of interoperation.
+Unlike ML and Scheme, Haskell does not evaluate function arguments or list construction operands. These three evaluation contexts comprise the set of incompatible strictness points between Haskell and ML, and Haskell and Scheme. Since Haskell permits unused erroneous or divergent expressions in these evaluation contexts and ML and Scheme do not, there are Haskell values that have no counterpart in ML and Scheme. Attempting to convert such values to ML and Scheme forces the evaluation of such expressions and breaks the transparency of interoperation.
 
 \input{figures/figlistunfixed.tex}
 
@@ -21,5 +21,3 @@ Moreover, since the conversion of functions from ML and Scheme to Haskell requir
 \input{figures/figfunctionfixed.tex}
 
 Likewise, figure \ref{figfunctionunfixed} demonstrates the conversion of a function from Haskell to Scheme. Scheme forces the evaluation of the erroneous Haskell argument in the process of applying the Scheme function, even though the Haskell argument is never used. From the perspective of the outermost Haskell application, the argument must have been used, but it was not. Figure \ref{figfunctionfixed} demonstrates Scheme not forcing the evaluation of the Haskell argument, which allows the Scheme function to produce a number.
-
-It is clear that in the contexts of the incompatible strictness points in ML and Scheme, reducible expressions in Haskell boundaries must not be evaluated to preserve the transparency of interoperation.
