--- a/section3.tex
+++ b/section3.tex
@@ -1,3 +1,3 @@
 \section{Conclusion}
 
-Lazy and eager evaluation can be resolved transparently for common expressions at the boundaries between languages with unforced and forced values. This is more convenient than an explicit force operator that programmers must use manually by anticipating which expressions must be forced.
+Interoperation transparently resolves lazy and eager evaluation strategies by the eager evaluation strategy mirroring the lazy one for reducible expressions inside boundaries in evaluation contexts common to both languages where strictness is incompatible. Forced and unforced evaluation contexts and values comprise a simple framework that implements such a system. This method may be extended to resolve incompatible strictness points for any evaluation contexts common to any two languages.
