Changed the sections to chapters.
Removed \onehalfspacing from the figures.

--- a/chapter1.tex
+++ b/chapter1.tex
@@ -1,4 +1,4 @@
-\section{Introduction}
+\chapter{Introduction}
 
 Programmers forgo existing solutions to problems in other programming languages where software interoperation proves too cumbersome; they remake solutions, rather than reuse them. To facilitate reuse, interoperation must resolve language incompatibilities transparently. To address part of this problem, we present a model of computation that resolves lazy and eager evaluation strategies.
 
