--- a/chapter2.tex
+++ b/chapter2.tex
@@ -1,4 +1,4 @@
-\section{Model of Computation}
+\chapter{Model of Computation}
 
 To preserve the transparency of interoperation, ML and Scheme must not force Haskell to evaluate reducible expressions in Haskell boundaries in the incompatible evaluation contexts, and force their evaluation in all other evaluation contexts. Haskell boundaries must be a new kind of value that ML and Scheme can force to become a reducible expression in certain evaluation contexts, and thereby force the evaluation of the inner Haskell reducible expressions to Haskell values and the conversion of those values to ML or Scheme.
 
