--- a/model/symbols.tex
+++ b/model/symbols.tex
@@ -1,6 +1,5 @@
 \begin{figure}[p]
-
-\onehalfspacing
+%\onehalfspacing
 \centering
 \begin{tabular}{cl}
 
@@ -26,7 +25,6 @@
 \varvar & Variable \\
 
 \end{tabular}
-
 \caption{Symbol names}
 \label{figsymbols}
 \end{figure}
