--- a/model/syntax.tex
+++ b/model/syntax.tex
@@ -1,6 +1,5 @@
 \begin{figure}[p]
-
-\onehalfspacing
+%\onehalfspacing
 \centering
 \begin{tabular}{rl}
 
@@ -33,14 +32,12 @@
 \exptapp{\varexp}{\varty} & Type application \\
 
 \end{tabular}
-
 \caption{Syntax names}
 \label{figsyntax1}
 \end{figure}
 
 \begin{figure}[p]
-
-\onehalfspacing
+%\onehalfspacing
 \centering
 \begin{tabular}{rl}
 
@@ -55,7 +52,6 @@
 \cslist{\varcs} & List \\
 
 \end{tabular}
-
 \caption{Syntax names}
 \label{figsyntax2}
 \end{figure}
