Fixed some things in the H syntax and redrules. Changed u nonterminals to f. Added hs/sh roundtrip rule.

--- a/macros.tex
+++ b/macros.tex
@@ -111,11 +111,11 @@
 \newcommand{\vartym}{\ensuremath{\varty\langm}}
 
 \newcommand{\varvalu}{\ensuremath{\symvalu}\xspace}
-\newcommand{\varvaluh}{\ensuremath{\varvalu\langh}\xspace}
 \newcommand{\varvalum}{\ensuremath{\varvalu\langm}\xspace}
 \newcommand{\varvalus}{\ensuremath{\varvalu\langs}\xspace}
 
 \newcommand{\varvalf}{\ensuremath{\symvalf}\xspace}
+\newcommand{\varvalfh}{\ensuremath{\varvalf\langh}\xspace}
 \newcommand{\varvalfm}{\ensuremath{\varvalf\langm}\xspace}
 \newcommand{\varvalfs}{\ensuremath{\varvalf\langs}\xspace}
 
@@ -154,7 +154,7 @@
 \newcommand{\expsub}[2]{\ensuremath{\formsym{\symsub} \; #1 \; #2}}
 \newcommand{\expsubst}[3]{\ensuremath{\subst{#1}{#2}{#3}}}
 \newcommand{\exptabs}[2]{\ensuremath{\Lambda #1 . #2}}
-\newcommand{\exptapp}[2]{\ensuremath{#1 \langle #2 \rangle}}
+\newcommand{\exptapp}[2]{\ensuremath{#1 \; \langle #2 \rangle}}
 \newcommand{\exptl}[1]{\ensuremath{\formsym{\symtl} \; #1}}
 \newcommand{\expwrongd}[1]{\ensuremath{\formsym{\symwrong} \; #1}}
 \newcommand{\expwrongs}[2]{\ensuremath{\formsym{\symwrong} \; #1 \; #2}}
