--- a/model/haskell/operational-semantics/scheme.tex
+++ b/model/haskell/operational-semantics/scheme.tex
@@ -2,6 +2,43 @@
 \centering
 \begin{tabular}{l}
 
+% hs L (sh L e)
+
+\redruleh
+{
+	\exphs
+	{
+		\first
+		{
+			\vartyh
+		}
+	}
+	{
+		(
+		\expsh
+		{
+			\second
+			{
+				\vartyh
+			}
+		}
+		{
+			\first
+			{
+				\varexph
+			}
+		}
+		)
+	}
+}
+{
+	\first
+	{
+		\varexph
+	}
+}
+(\first{\vartyh} = \second{\vartyh}) \\
+
 % hs N n
 
 \redruleh
