--- a/chapter3.tex
+++ b/chapter3.tex
@@ -1,3 +1,3 @@
 \chapter{Conclusion}
 
-Interoperation transparently resolves lazy and eager evaluation strategies by the eager evaluation strategy mirroring the lazy one for reducible expressions inside boundaries in evaluation contexts common to both languages where strictness is incompatible. Forced and unforced evaluation contexts and values comprise a simple framework that implements such a system. This method could be extended to resolve incompatible evaluation contexts for expressions common to any pair of languages.
+Interoperation transparently resolves lazy and eager evaluation strategies by the eager evaluation strategy mirroring the lazy one for reducible expressions inside boundaries in evaluation contexts common to both languages where strictness is incompatible. Forced and unforced evaluation contexts and values comprise a simple framework that implements such a system. This method could be extended to resolve incompatible evaluation strategies for evaluation contexts common to any pair of languages.
