--- a/figures/figlistunfixed.tex
+++ b/figures/figlistunfixed.tex
@@ -1,5 +1,5 @@
-\begin{figure}[tb]
-%\onehalfspacing
+\begin{figure}[p]
+\caption{Transparency broken for list construction operands.}
 \centering
 \begin{tabular}{ll}
 % sh {N} (cons (wrong N str) (nil N))
@@ -85,6 +85,5 @@
 &
 \\
 \end{tabular}
-\caption{Scheme forces the conversion of list construction operands.}
 \label{figlistunfixed}
 \end{figure}
