--- a/figures/figfunctionfixed.tex
+++ b/figures/figfunctionfixed.tex
@@ -1,5 +1,5 @@
-\begin{figure}[tb]
-%\onehalfspacing
+\begin{figure}[p]
+\caption{Transparency not broken for function arguments.}
 \centering
 \begin{tabular}{ll}
 % (hs (N->N) (\x.0)) (wrong N str)
@@ -194,6 +194,5 @@
 &
 \\
 \end{tabular}
-\caption{Scheme does not force the conversion of arguments.}
 \label{figfunctionfixed}
 \end{figure}
