--- a/figures/figfunctionunfixed.tex
+++ b/figures/figfunctionunfixed.tex
@@ -1,5 +1,5 @@
-\begin{figure}[tb]
-%\onehalfspacing
+\begin{figure}[p]
+\caption{Transparency broken for function arguments.}
 \centering
 \begin{tabular}{ll}
 % (hs (N->N) (\x.0)) (wrong N str)
@@ -177,6 +177,5 @@
 &
 \\
 \end{tabular}
-\caption{Scheme forces the conversion of arguments.}
 \label{figfunctionunfixed}
 \end{figure}
