--- a/figures/figlistfixed.tex
+++ b/figures/figlistfixed.tex
@@ -1,5 +1,5 @@
-\begin{figure}[tb]
-%\onehalfspacing
+\begin{figure}[p]
+\caption{Transparency not broken for list construction operands.}
 \centering
 \begin{tabular}{ll}
 % sh {N} (cons (wrong N str) (nil N))
@@ -112,6 +112,5 @@
 &
 \\
 \end{tabular}
-\caption{Scheme does not force the conversion of list construction operands.}
 \label{figlistfixed}
 \end{figure}
