Example figures: Rephrased captions. Removed redundant column headers.
Added a table to the lump equality figure for spacing.

--- a/model/equality.tex
+++ b/model/equality.tex
@@ -1,19 +1,15 @@
 \begin{figure}[p]
-%\onehalfspacing
-\centering
-
-$x \eq x$
-
-$x \eq y \Rightarrow y \eq x$
-
-$x \eq y$ and $y \eq z \Rightarrow x \eq z$
-
-$\vartyh \eq \tylump$
-
-$\vartym \eq \tylump$
-
-$\vartyh = \vartym \Rightarrow \vartyh \symlumpeq \vartym$
-
 \caption{Lump equality}
+\centering
+\begin{tabular}{c}
+
+$x \eq x$ \\
+$x \eq y \Rightarrow y \eq x$ \\
+$x \eq y$ and $y \eq z \Rightarrow x \eq z$ \\
+$\vartyh \eq \tylump$ \\
+$\vartym \eq \tylump$ \\
+$\vartyh = \vartym \Rightarrow \vartyh \symlumpeq \vartym$ \\
+
+\end{tabular}
 \label{figequality}
 \end{figure}
