--- a/model/unbrand.tex
+++ b/model/unbrand.tex
@@ -1,5 +1,5 @@
 \begin{figure}[p]
-%\onehalfspacing
+\caption{Convert conversion schemes to types.}
 \centering
 \begin{tabular}{rcl}
 
@@ -17,6 +17,5 @@
 \tyunbrand{\csbrand{\varbrand}{\vartym}} & $=$ & \vartym \\
 
 \end{tabular}
-\caption{Unbrand function}
 \label{figunbrand}
 \end{figure}
