Model figures: Moved captions to the top, added periods to the end.

--- a/model/haskell/operational-semantics/scheme.tex
+++ b/model/haskell/operational-semantics/scheme.tex
@@ -1,4 +1,5 @@
 \begin{figure}[p]
+\caption{Haskell-Scheme operational semantics.}
 \centering
 \begin{tabular}{l}
 
@@ -106,6 +107,5 @@ $(\varvalfs \neq \expsh{(\csbrand{\varbrand}{\vartyh})}{\varexph})$ \\
 {\exptabs{\tyvarh}{\exphs{\varcsh}{\varvalfs}}} \\
 
 \end{tabular}
-\caption{Haskell-Scheme operational semantics}
 \label{fighsos}
 \end{figure}
