--- a/model/haskell/syntax.tex
+++ b/model/haskell/syntax.tex
@@ -1,4 +1,5 @@
 \begin{figure}[p]
+\caption{Haskell syntax and evaluation contexts.}
 \centering
 \begin{tabular}{rcl}
 
@@ -23,6 +24,5 @@
 && \expif{\varconfh}{\varexph}{\varexph} $|$ \expfield{\varconfh} $|$ \exppnull{\varconfh} $|$ \exphm{\vartyh}{\vartym}{\varconfm} $|$ \exphs{\varcsh}{\varconfs}
 
 \end{tabular}
-\caption{Haskell syntax and evaluation contexts}
 \label{fighs}
 \end{figure}
