--- a/model/ml/operational-semantics/haskell.tex
+++ b/model/ml/operational-semantics/haskell.tex
@@ -1,4 +1,5 @@
 \begin{figure}[p]
+\caption{ML-Haskell operational semantics.}
 \centering
 \begin{tabular}{l}
 
@@ -131,6 +132,5 @@ $(\vartym \neq \tylump)$ \\
 {\exptabs{\tyvarm}{\expmh{\vartym}{\tysubst{\vartyh}{\tylump}{\tyvarh}}{\expsubst{\varexph}{\tylump}{\second{\tyvarh}}}}} \\
 
 \end{tabular}
-\caption{ML-Haskell operational semantics}
 \label{figmhos}
 \end{figure}
