--- a/model/ml/operational-semantics/ml.tex
+++ b/model/ml/operational-semantics/ml.tex
@@ -1,4 +1,5 @@
 \begin{figure}[p]
+\caption{ML operational semantics.}
 \centering
 \begin{tabular}{l}
 
@@ -88,6 +89,5 @@ $(\varnum \neq 0)$ \\
 {\experr{\varstr}}
 
 \end{tabular}
-\caption{ML operational semantics}
 \label{figmos}
 \end{figure}
