--- a/model/ml/operational-semantics/scheme.tex
+++ b/model/ml/operational-semantics/scheme.tex
@@ -1,4 +1,5 @@
 \begin{figure}[p]
+\caption{ML-Scheme operational semantics.}
 \centering
 \begin{tabular}{l}
 
@@ -72,6 +73,5 @@ $(\varvalfs \neq \expnum{\varnum})$ \\
 {\exptabs{\tyvarm}{\expms{\varcsm}{\varvalfs}}} \\
 
 \end{tabular}
-\caption{ML-Scheme operational semantics}
 \label{figmsos}
 \end{figure}
