--- a/model/ml/syntax.tex
+++ b/model/ml/syntax.tex
@@ -1,4 +1,5 @@
 \begin{figure}[p]
+\caption{ML syntax and evaluation contexts.}
 \centering
 \begin{tabular}{rcl}
 
@@ -29,6 +30,5 @@
 && \expms{\varcsm}{\varconfs}
 
 \end{tabular}
-\caption{ML syntax and evaluation contexts}
 \label{figms}
 \end{figure}
