--- a/model/ml/typing-rules.tex
+++ b/model/ml/typing-rules.tex
@@ -1,4 +1,5 @@
 \begin{figure}[p]
+\caption{ML typing rules.}
 \[
 % L
 \frac
@@ -124,6 +125,5 @@
 {\judtm{\env}{\vartym} \quad \judth{\env}{\first{\vartyh}} \quad \judeh{\env}{\varexph}{\second{\vartyh}} \quad \vartym \eq \vartyh \quad \first{\vartyh} = \second{\vartyh}}
 {\judem{\env}{\expmh{\vartym}{\vartyh}{\first{\varexph}}}{\vartym}}
 \]
-\caption{ML typing rules}
 \label{figmtr}
 \end{figure}
