--- a/model/scheme/operational-semantics/haskell.tex
+++ b/model/scheme/operational-semantics/haskell.tex
@@ -1,4 +1,5 @@
 \begin{figure}[p]
+\caption{Scheme-Haskell operational semantics.}
 \centering
 \begin{tabular}{l}
 
@@ -71,6 +72,5 @@
 {\expsh{\cssubst{\varcsh}{\cslump}{\first{\csvarh}}}{\expsubst{\varexph}{\tylump}{\second{\tyvarh}}}} \\
 
 \end{tabular}
-\caption{Scheme-Haskell operational semantics}
 \label{figshos}
 \end{figure}
