--- a/model/scheme/operational-semantics/ml.tex
+++ b/model/scheme/operational-semantics/ml.tex
@@ -1,4 +1,5 @@
 \begin{figure}[p]
+\caption{Scheme-ML operational semantics.}
 \centering
 \begin{tabular}{l}
 
@@ -47,6 +48,5 @@
 {\expsm{\cssubst{\first{\varcsm}}{\cslump}{\csvarm}}{\expsubst{\varexpm}{\tylump}{\second{\tyvarm}}}} \\
 
 \end{tabular}
-\caption{Scheme-ML operational semantics}
 \label{figsmos}
 \end{figure}
