--- a/model/scheme/operational-semantics/scheme.tex
+++ b/model/scheme/operational-semantics/scheme.tex
@@ -1,4 +1,5 @@
 \begin{figure}[p]
+\caption{Scheme operational semantics.}
 \centering
 \begin{tabular}{l}
 
@@ -144,6 +145,5 @@ $(\varvalfs \neq \expnum{\varnum})$ \\
 {\experr{\varstr}}
 
 \end{tabular}
-\caption{Scheme operational semantics}
 \label{figsos}
 \end{figure}
