--- a/model/scheme/syntax.tex
+++ b/model/scheme/syntax.tex
@@ -1,4 +1,5 @@
 \begin{figure}[p]
+\caption{Scheme syntax and evaluation contexts.}
 \centering
 \begin{tabular}{lcl}
 
@@ -23,6 +24,5 @@
 && \expcons{\varconus}{\varexps} $|$ \expcons{\varvalus}{\varconus} $|$ \expfield{\varconfs} $|$ \expsm{\varcsm}{\varconfm}
 
 \end{tabular}
-\caption{Scheme syntax and evaluation contexts}
 \label{figss}
 \end{figure}
