--- a/model/scheme/typing-rules.tex
+++ b/model/scheme/typing-rules.tex
@@ -1,4 +1,5 @@
 \begin{figure}[p]
+\caption{Scheme typing rules.}
 \[
 % TST
 \frac
@@ -77,6 +78,5 @@
 {\judtm{\env}{\tyunbrand{\varcsm}} \quad \judem{\env}{\varexpm}{\vartym} \quad \tyunbrand{\varcsm} = \vartym}
 {\judes{\env}{\expsm{\varcsm}{\varexpm}}{\tytst}}
 \]
-\caption{Scheme typing rules}
 \label{figstr}
 \end{figure}
